# excercise-timer

./: .gitignore  README.md  pyproject.toml
src/excercise-timer/: __main__.py
